name:                houkanren
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kyagrd/houkanran
license:             BSD3
license-file:        LICENSE
author:              Ki Yung Ahn
maintainer:          kyagrd@gmail.com
copyright:           2017 Ki Yung Ahn
category:            Logic Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable houkanren
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       HOuKanren
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unbound >= 0.5.1 && < 0.6
                     , RepLib
                     , transformers
                     , unordered-containers
                     , hashable
                     , monad-parallel
